01 - OpenCRVS Documentation/v1.7/product-specifications/core-functions/8.-correct-record.md
---
title: "9. Correct record"
source_url: "https://documentation.opencrvs.org/v1.7/product-specifications/core-functions/8.-correct-record"
markdown_url: "https://documentation.opencrvs.org/v1.7/product-specifications/core-functions/8.-correct-record.md"
version: "v1.7"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:b8824d1132aa4801fff9dce275ac08f8bfc66e0a13b21842d2b502569646b051"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.7/product-specifications/core-functions/8.-correct-record.md).

# 9. Correct record

Mistakes can be made during any administrative process and therefore the ability to correct these in a safe manner, along with an audit trail, needs to be available.

OpenCRVS allows a Registrar to correct a record, provide a reason for the correction, attach accompanying supporting documents and make the correction, keeping an audit of all actions throughout.

### **Pre-condition**

A record has the status ‘Registered’, ‘Certified’ or ‘Issued’

### **Triggers**

* A user has `scope:record.registration-correct` they can correct the record
* A user `scope:record.registration-request-correction` they can request a correction to a record

### **Standard flow**

1. A user searches for the record or finds it in their workqueue
2. User opens the record audit
3. User assigns themselves to the record
4. Record is downloaded and is now available to be corrected offline
5. User clicks “Correct record”
6. User selects who is requesting a change to the record
7. Requester ID is checked if it is the previous informant, mother or father
8. User clicks “Change” on the detail that needs to be corrected
9. User makes correction
10. User review change/s
11. User uploads any supporting documents
12. User selects the reason for correction and adds any additional comments
13. User reviews the correction summary and collects any fees
14. On confirming correction, declaration is sent to the Outbox for processing
15. Once processed the declaration status remains the same

### **Post conditions**

* User can choose to re-certify record
* Record audit is updated to show that the record has been ‘Corrected’

### Variations/**Exceptions**

* A user with `scope:record.registration-request-correction` can request a correction to a record. They make the correction and from the summary they can request approval for their corrrection request.
* A user `scope:record.registration-correct-record` will see correction requests in the Ready for review workqueue. They can assign a review the correction request and then approve or rejects the request

{% embed url="<https://youtu.be/X5InZSEoI7Y>" %}


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.7/product-specifications/core-functions/8.-correct-record.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
